# Agentic-Tool-

./: README.md  pyproject.toml
updatedLangchain/: 1-langchain.ipynb  2-modelintegration.ipynb  3-toolCreation.ipynb  4-messages.ipynb  5-structureOutput.ipynb  6-middleware.ipynb
