[project]
name = "langchain"
description = "LangChain is a framework for developing applications powered by language models."
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-groq",
    "python-dotenv",
    "langchain-google-genai",
]

[tool.uv.uv]
required-version = ">=0.9.0"    

[tool.uv.index]
extra = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-groq",
    "python-dotenv",
    "langchain-google-genai",
]   
